--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
-
+# API keys config
+config.js
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
